2008-01-06 Jerome Rapinat <romjerome@yahoo.fr>
        * src/docgen/Makefile.am: gtkprintpreview.glade was not pasted on install 

2008-01-06  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/MyGrampsView.py (MyGrampsView.clear_gadgets): 
	Protect on re-columning from gadgets that have been removed

2008-01-06  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/MediaView.py:
	* src/DataViews/RepositoryView.py:
	* src/DataViews/SourceView.py:
	* src/DataViews/EventView.py:
	* src/DataViews/PlaceView.py:
	* src/PageView.py:
	Remove unused double click procedure
	* src/plugins/SimpleBookTitle.py: remove use of AddMedia
	* src/Editors/AddMedia.py: added
	* src/AddMedia.py: removed
	* src/Editors/Makefile.am:
	* src/Makefile.am:
	* po/POTFILES.in:
	Move AddMedia to the editors directory
	* src/Editors/_EditMedia.py:
	Edit Media now works as other editors, spawning AddMedia when 
	select is clicked.
	* src/ManagedWindow.py: typo in comment
	* src/Config/_GrampsConfigKeys.py: Two new keys, rerun ./autogen.sh
	Still todo: make relative path work

2008-01-06  Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/DefaultGadgets.py: handle long text in standard way for 
		translation

2008-01-06  Peter Landgren <peter.talken2telia.com>
	* src/plugins/Verify.py: Removed unneccesary
                             print statement "print event.get_type()"

2008-01-06  Benny Malengier <benny.malengier@gramps-project.org>
            Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/docgen/LaTeXDoc.py: wrong indent on write, bug #1506

2008-01-06  Brian Matherly <brian@gramps-project.org>
            Raphael Ackermann <raphael.ackermann@gmail.com>
            James Friedmann <jfriedmannj@gmail.com>
	* src/ReportBase/_ReportUtils.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DetAncestralReport.py:
	0001408: Low Verbosity / Succinct option for the Detailed 