@@ -1,3 +1,10 @@
+2008-01-06  Brian Matherly <brian@gramps-project.org>
+	* src/Config/_GrampsConfigKeys.py:
+	* src/DataViews/__init__.py:
+	* src/DataViews/GoogleView.py:
+	Don't enable GoogleView and pass on gtkmozembed failure for systems that
+	don't have Gnome.
+
 2008-01-06 Jerome Rapinat <romjerome@yahoo.fr>
         * src/docgen/Makefile.am: gtkprintpreview.glade was not pasted on install 
 
